// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextFieldWrapper snapshots tests renders TextField component 1`] = `
<Fragment>
  <TextField
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "undefined",
        "id": "undefined-label",
        "shrink": undefined,
      }
    }
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id="undefined"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "undefined-label",
        "id": "undefined",
        "label": undefined,
      }
    }
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component appending a class 1`] = `
<Fragment>
  <TextField
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "undefined",
        "id": "undefined-label",
        "shrink": undefined,
      }
    }
    className="requiredField"
    floatingLabelText="This is a test textfield component"
    fullWidth={true}
    id="undefined"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "undefined-label",
        "id": "undefined",
        "label": undefined,
      }
    }
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;

exports[`TextFieldWrapper snapshots tests renders TextField component with shrink:true 1`] = `
<Fragment>
  <TextField
    InputLabelProps={
      Object {
        "hidden": false,
        "htmlFor": "undefined",
        "id": "undefined-label",
        "shrink": true,
      }
    }
    floatingLabelText="This is a test textfield component"
    floatinglabelfixed={true}
    fullWidth={true}
    id="undefined"
    inputProps={
      Object {
        "aria-label": undefined,
        "aria-labelledby": "undefined-label",
        "id": "undefined",
        "label": undefined,
      }
    }
    name="testField"
    required={false}
    select={false}
    type="text"
    variant="standard"
  />
</Fragment>
`;
